# ili2ofgdb

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: ili2ofgdb-smoke.yml  ofgdb-jdbc-fatjar.yml  openfgdb4j-native-matrix.yml
benchmark/: DMAV_Bodenbedeckung_V1_1.gpkg  README.md
docs/: CHANGELOG.txt
gdal-minimal/: README.md
gdal-minimal/scripts/: build-all.ps1  build-all.sh  build-gdal.sh  build-proj.sh  build-sqlite.sh  common.sh  fetch-sources.sh  prepare-tree.sh
ili2ofgdb/test/data/mapping/: OfgdbAliasDomainTest.ili  OfgdbRangeDomainTest.ili
ili2ofgdb/test/smoke/: SmokeInspector.java
ofgdb-jdbc/: README.md  build.gradle  settings.gradle
openfgdb4j/: README.md
openfgdb4j/native/: CMakeLists.txt
openfgdb4j/native/include/: openfgdb_c_api.h
openfgdb4j/native/src/: openfgdb_backend_gdal.cpp
openfgdb4j/scripts/: build-java.sh  build-native.sh  generate-bindings.sh  import-gdal-core-minimal.sh  import-gdal-openfilegdb.sh
openfgdb4j/scripts/ci/: build-and-test-unix.sh  build-and-test-windows.ps1  package-artifact.ps1  package-artifact.sh
test/data/Dataset23Smart1/Dataset23Smart1.gdb/: a00000001.gdbtable  a00000001.gdbtablx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000b.gdbtable  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtable  a0000000f.gdbtablx  a00000010.gdbtable  a00000010.gdbtablx  a00000011.gdbtable  a00000012.gdbtable  a00000012.gdbtablx  a00000013.gdbtable  a00000013.gdbtablx  a00000014.gdbtable  a00000014.gdbtablx  a00000015.gdbtable  a00000015.gdbtablx  a00000016.gdbtable
test/data/Datatypes23/: Datatypes23Attr-out.xtf  Datatypes23Line-out.xtf  Datatypes23Surface-out.xtf
test/data/Datatypes23/Datatypes23.gdb/: a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000006.gdbtable  a00000006.gdbtablx  a00000009.gdbtable  a0000000a.gdbtable  a0000000b.gdbindexes  a0000000b.gdbtable  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000d.gdbindexes  a0000000d.gdbtable  a0000000e.gdbindexes  a0000000e.gdbtable  a0000000f.gdbindexes  a0000000f.gdbtable  a00000010.gdbindexes  a00000010.gdbtable  a00000011.gdbindexes  a00000011.gdbtable  a00000011.gdbtablx  a00000012.gdbindexes  a00000012.gdbtable  a00000012.gdbtablx  a00000013.gdbindexes  a00000013.gdbtable  a00000013.gdbtablx  a00000014.gdbindexes  a00000014.gdbtable  a00000014.gdbtablx  a00000015.gdbindexes  a00000015.gdbtable  a00000016.gdbtable  a00000017.gdbtable  a00000017.gdbtablx  a00000018.gdbtable  (+13 more)
test/data/MandatoryChecks/: MandatorySimple.ili
test/data/MultiLine/MultiLine.gdb/: a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.gdbtable  a00000004.gdbtablx  a00000006.gdbtable  a00000006.gdbtablx  a00000009.gdbindexes  a00000009.gdbtable  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000b.gdbtable  a0000000c.gdbtable  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtable  a0000000f.gdbtablx  a00000010.gdbtable  a00000010.gdbtablx  a00000011.gdbtable  a00000012.gdbtable  a00000013.gdbtable  a00000013.gdbtablx  a00000014.gdbtablx  a00000015.gdbtable  a00000015.gdbtablx  a00000016.gdbtable  a00000016.gdbtablx
test/data/MultiSurface/: MultiSurface2a-out.xtf
test/data/MultiSurface/MultiSurface.gdb/: a00000001.gdbtable  a00000001.gdbtablx  a00000004.gdbtable  a00000004.gdbtablx  a00000006.gdbtable  a00000006.gdbtablx  a00000009.gdbindexes  a00000009.gdbtable  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000b.gdbtable  a0000000c.gdbindexes  a0000000c.gdbtable  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000f.gdbtable  a0000000f.gdbtablx  a00000010.gdbtable  a00000011.gdbtable  a00000011.gdbtablx  (+8 more)
test/data/MultipleGeomAttrs/: MultipleGeomAttrs1a-out.xtf
test/data/Simple/: Simple23a-out.xtf  SimpleCoord10a-out.itf  SimpleCoord23a-out.xtf  SimpleInheritance23a-out.xtf  SimpleStruct23a-out.xtf  exportMetaConfig.ini
(+218 files in other folders)
